completed project 2 - tours app

--- a/project1-5/index.html
+++ b/project1-5/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Birthday Reminder app</title>
+  <!-- <title> 1.Birthday Reminder app</title> -->
+  <title> 2.Tours</title>
 </head>
 
 <body>
