--- a/project1-5/index.html
+++ b/project1-5/index.html
@@ -6,7 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- <title> 1.Birthday Reminder app</title> -->
-  <title> 2.Tours</title>
+  <title>5 React Projects</title>
 </head>
 
 <body>
