--- a/project6-10/index.html
+++ b/project6-10/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tours app</title>
+  <title>React Mini Projects 6-10</title>
 </head>
 
 <body>
